--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
-  "name": "Travel & Accessibility Companion",
-  "version": "1.1",
-  "description": "Translate, summarize, and simplify travel documents using Chrome’s built-in AI APIs.",
+  "name": "Travel & Accessibility OCR Companion",
+  "version": "1.2",
+  "description": "Extract text from images (OCR) and translate/summarize it using built-in AI APIs.",
   "permissions": ["activeTab", "scripting"],
   "action": {
     "default_popup": "popup.html",
